[package]
name = "gst-log-diff"
version = "0.1.1"
authors = ["Philippe Normand <philn@igalia.com>"]
edition = "2018"
repository = "https://github.com/philn/gst-log-diff"
license = "MIT"
readme = "README.rst"

[dependencies]
gst-log-parser = "0.1"
structopt = "0.2.16"
structopt-derive = "0.2.16"
difference = "2.0.0"
term = "0.5.2"
regex = "1.1.7"
